зло$%%чий рандом

--- a/WpfApp1/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1/WpfApp1.csproj
@@ -77,6 +77,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Generator_l.cs" />
+    <Compile Include="Genetator_h.cs" />
     <Compile Include="Test.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
