--- a/WpfApp1/WpfApp1/packages.config
+++ b/WpfApp1/WpfApp1/packages.config
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NuGet.Client" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Common" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.ContentModel" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Core" version="2.14.0" targetFramework="net461" />
+  <package id="NuGet.Frameworks" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Packaging" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Packaging.Core" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Packaging.Core.Types" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Repositories" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net461" />
+  <package id="NuGet.Versioning" version="4.2.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net461" />
